--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>LisbonDeals – Cupons Exclusivos para Experiências em Portugal</title>
+  <title>VoucherHub — Cupons Exclusivos para Experiências em Portugal</title>
 
   <link rel="stylesheet" href="style.css">
   
@@ -23,8 +23,7 @@
   <nav class="navbar">
     <div class="nav-container">
       <a href="#" class="logo">
-        <i class="fas fa-ticket-alt"></i>
-        <span>LisbonDeals</span>
+        <img src="logo.png" alt="VoucherHub Logo" style="height: 3rem; width: auto;">
       </a>
       <div class="nav-badge">
         <i class="fas fa-fire"></i>
@@ -61,7 +60,7 @@
     <div class="container">
       <div class="section-header">
         <h2>Experiências com <span class="highlight-orange">Descontos Exclusivos</span></h2>
-        <p>Clique numa modalidade para ver suas promoçôes</p>
+        <p>Clique numa modalidade para ver suas promoções</p>
       </div>
       
       <div class="cards-grid">
@@ -206,7 +205,7 @@
             <i class="fas fa-ticket-alt"></i>
           </div>
           <h3>Revele o Código</h3>
-          <p>Clique no botão "Revelar Código" dentro da modalidade escolhida, ou leve o QRcode até a loja fizica para ser escaneado.</p>
+          <p>Clique no botão "Revelar Código" dentro da modalidade escolhida copie o codigo, ou leve o QRcode até a loja fizica para ser escaneado.</p>
         </div>
         <div class="step">
           <div class="step-number">3</div>
@@ -226,8 +225,7 @@
       <div class="footer-content">
         <div class="footer-brand">
           <div class="footer-logo">
-            <i class="fas fa-ticket-alt"></i>
-            <span>LisbonDeals</span>
+            <img src="logo.png" alt="VoucherHub Logo" style="height: 4rem; width: auto;">
           </div>
           <p>Cupons exclusivos para as melhores experiências em Portugal.</p>
           <div class="social-links">
@@ -259,7 +257,7 @@
       </div>
       <div class="footer-bottom">
         <div class="footer-text">
-          <p>&copy; 2025 LisbonDeals. Todos os direitos reservados.</p>
+          <p>&copy; 2025 VoucherHub. Todos os direitos reservados.</p>
           <p>Os códigos promocionais são válidos apenas nos sites oficiais dos parceiros indicados.</p>
         </div>
       </div>
@@ -271,7 +269,6 @@
     <i class="fas fa-check-circle"></i>
     <span>Código copiado com sucesso!</span>
   </div>
-
   <script src="script.js"></script>
 </body>
 </html>
