--- a/experience.html
+++ b/experience.html
@@ -68,7 +68,7 @@
     <section class="experiences">
       <div class="container">
         <div class="section-header">
-          <h2>Schools with <span class="highlight-orange">Discount</span></h2>
+          <h2>Centro de <span class="highlight-orange">Descontos</span></h2>
           <p id="results-count">Loading offers…</p>
         </div>
 
