--- a/experience.html
+++ b/experience.html
@@ -24,7 +24,7 @@
 <link rel="alternate" hreflang="en" href="https://yourdomain.com/experience" />
 <link rel="alternate" hreflang="pt-br" href="https://yourdomain.com/br/experiencia" />
 <link rel="alternate" hreflang="x-default" href="https://yourdomain.com/experience" />
-
+<meta name="google" content="notranslate">
 </head>
   <body>
     <!-- Navegação reutilizada -->
