--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M80-40v-80h40q32 0 62-10t58-30q28 20 58 29.5t62 9.5q32 0 62.5-9.5T480-160q28 20 58 29.5t62 9.5q32 0 62.5-9.5T720-160q27 20 57.5 30t62.5 10h40v80h-40q-31 0-61-7.5T720-70q-29 15-59 22.5T600-40q-31 0-61-7.5T480-70q-29 15-59 22.5T360-40q-31 0-61-7.5T240-70q-29 15-59 22.5T120-40H80Zm260-760 222 41q14 2 27 11t22 25l35 62q26 45 72 73t102 28v80q-78 0-142-39T577-621l-90 61 153 120v154q16 11 31 23t29 23q-21 18-46 29t-54 11q-36 0-67-17t-53-43q-22 26-53 43t-67 17q-10 0-19.5-1.5T322-206q-86-59-144-119t-58-104q0-31 24-41t50-10q29 0 67 8.5t81 24.5l-21-124q-4-20 4.5-39.5T352-642l86-58q-3 0-14.5-2.5t-25.5-5-25.5-5Q361-715 358-715l-113 77-45-66 140-96Zm72 284 18 106q27 13 67 34.5t63 35.5v-60L412-516Zm268-224q-33 0-56.5-23.5T600-820q0-33 23.5-56.5T680-900q33 0 56.5 23.5T760-820q0 33-23.5 56.5T680-740Z"/></svg>
             <h3 data-i18n="experiences.surfSchools">Surf Schools</h3>
             <div class="price-section">
-              <div class="price-original">€60</div>
-              <div class="price-discount">€48</div>
-              <div class="savings"><span data-i18n="experiences.save">Save</span> €12</div>
+              <div class="price-original">€30</div>
+              <div class="price-discount">€25,5</div>
+              <div class="savings"><span data-i18n="experiences.save">Save</span> €4,5</div>
             </div>
             <div class="card-actions">
               <span class="btn btn-code" style="pointer-events:none">
@@ -168,16 +168,16 @@
             <img src="https://res.cloudinary.com/dqn2v9mtu/image/upload/v1759862655/IMG-20251002-WA0020_dsvvsi.jpg" alt="Moda">
             <div class="card-badge">
               <i class="fas fa-percentage"></i>
-              <span>20% OFF</span>
+              <span>10% - 20% OFF</span>
             </div>
           </div>
           <div class="card-content">
             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M80-40v-80h40q32 0 62.5-10t57.5-30q26 18 55 28t60 11q33 1 65-9t60-30q26 19 57 29t63 10q32 0 62-9.5t58-29.5q28 20 58.5 30t61.5 10h40v80h-40q-31 0-61-7.5T720-70q-29 15-58.5 22.5T600-40q-31 0-61-7.5T480-70q-29 16-61 23.5T355-40q-30-1-59-8.5T240-70q-29 15-58.5 22.5T120-40H80Zm280-160q-26 0-51.5-10T260-240q14-11 29-23t31-23l-62-119q-9-17-13.5-36t-4.5-39v-160q0-33 23.5-56.5T320-720h120q40 0 76.5-15t65.5-43l56 56q-41 40-92 61t-106 21h-56v140h112l68 75q65-27 115.5-41t86.5-14q35 0 54.5 13.5T840-429q0 39-54 98.5T638-206q-8 2-18.5 4t-19.5 2q-32 0-64-15.5T480-260q-24 29-55.5 44.5T360-200Zm33-136q16-10 46-27t49-26l-28-31-100 4 33 80Zm-73-424q-33 0-56.5-23.5T240-840q0-33 23.5-56.5T320-920q33 0 56.5 23.5T400-840q0 33-23.5 56.5T320-760Zm342-20-42-42 98-98h84L662-780Z"/></svg>
             <h3 data-i18n="experiences.fashionBrand">Fashion Brand</h3>
             <div class="price-section">
-              <div class="price-original">€85</div>
-              <div class="price-discount">€68</div>
-              <div class="savings"><span data-i18n="experiences.save">Save</span> €17</div>
+              <div class="price-original">€67,83</div>
+              <div class="price-discount">€54,27</div>
+              <div class="savings"><span data-i18n="experiences.save">Save</span> €13,56</div>
             </div>
             <div class="card-actions">
               <span class="btn btn-code" style="pointer-events:none">
@@ -194,7 +194,7 @@
             <img src="https://images.pexels.com/photos/1705264/pexels-photo-1705264.jpeg" alt="Kitesurf">
             <div class="card-badge">
               <i class="fas fa-percentage"></i>
-              <span>20% OFF</span>
+              <span>10% - 20% OFF</span>
             </div>
           </div>
           <div class="card-content">
@@ -220,7 +220,7 @@
             <img src="https://images.pexels.com/photos/1135197/pexels-photo-1135197.jpeg" alt="Quadriciclo Sintra">
             <div class="card-badge">
               <i class="fas fa-percentage"></i>
-              <span>20% OFF</span>
+              <span>10% - 20% OFF</span>
             </div>
           </div>
           <div class="card-content">
