--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <!-- SEO: Meta / Open Graph / Twitter -->
   <meta name="description" content="VoucherHub – Discover the best experiences in Portugal with exclusive coupon codes. Save on restaurants, surf schools, walking tours, yoga studios and more in Lisbon and beyond.">
-  <meta name="keywords" content="Portugal discount codes, Lisbon coupons, Portugal deals, surf school discount, walking tour promo code Lisbon, yoga class offers, restaurant discounts Portugal, travel deals Portugal">
+  <meta name="keywords" content="Portugal discount codes, Lisbon coupons, Portugal deals, surf school discount, walking tour promo code Lisbon, yoga class offers, restaurant discounts Portugal, travel deals Portugal, o que fazer em Portugal, atividades em Lisboa, experiências com desconto, códigos promocionais Portugal, cupões de desconto Lisboa, tours e bilhetes baratos, surf lessons Portugal, yoga studio Lisboa desconto, voucher atividades Portugal, turismo barato Portugal, descontos exclusivos, things to do in Lisbon, Lisbon activities, exclusive discounts, what to do in Portugal, activities in Lisbon, discounted experiences, promotional codes Portugal, discount coupons Lisbon, cheap tours and tickets, surf lessons Portugal, yoga studio Lisbon discount, voucher activities Portugal, cheap tourism Portugal, exclusive discounts">
   <meta name="author" content="VoucherHub">
   <link rel="canonical" href="https://yourdomain.com/">
   <link rel="alternate" hreflang="en" href="https://yourdomain.com/" />
@@ -167,12 +167,12 @@
           <div class="card-image">
             <img src="https://res.cloudinary.com/dqn2v9mtu/image/upload/v1759862655/IMG-20251002-WA0020_dsvvsi.jpg" alt="Moda">
             <div class="card-badge">
-              <i class="fas fa-percentage"></i>
+              
               <span>10% - 20% OFF</span>
             </div>
           </div>
           <div class="card-content">
-            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M80-40v-80h40q32 0 62.5-10t57.5-30q26 18 55 28t60 11q33 1 65-9t60-30q26 19 57 29t63 10q32 0 62-9.5t58-29.5q28 20 58.5 30t61.5 10h40v80h-40q-31 0-61-7.5T720-70q-29 15-58.5 22.5T600-40q-31 0-61-7.5T480-70q-29 16-61 23.5T355-40q-30-1-59-8.5T240-70q-29 15-58.5 22.5T120-40H80Zm280-160q-26 0-51.5-10T260-240q14-11 29-23t31-23l-62-119q-9-17-13.5-36t-4.5-39v-160q0-33 23.5-56.5T320-720h120q40 0 76.5-15t65.5-43l56 56q-41 40-92 61t-106 21h-56v140h112l68 75q65-27 115.5-41t86.5-14q35 0 54.5 13.5T840-429q0 39-54 98.5T638-206q-8 2-18.5 4t-19.5 2q-32 0-64-15.5T480-260q-24 29-55.5 44.5T360-200Zm33-136q16-10 46-27t49-26l-28-31-100 4 33 80Zm-73-424q-33 0-56.5-23.5T240-840q0-33 23.5-56.5T320-920q33 0 56.5 23.5T400-840q0 33-23.5 56.5T320-760Zm342-20-42-42 98-98h84L662-780Z"/></svg>
+            <i class="fas fa-tshirt"></i>
             <h3 data-i18n="experiences.fashionBrand">Fashion Brand</h3>
             <div class="price-section">
               <div class="price-original">€67,83</div>
