--- a/experience.html
+++ b/experience.html
@@ -26,6 +26,17 @@
     <link rel="alternate" hreflang="pt-br" href="https://yourdomain.com/br/experiencia" />
     <link rel="alternate" hreflang="x-default" href="https://yourdomain.com/experience" />
     <meta name="google" content="notranslate">
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8PZ7RNGLVL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8PZ7RNGLVL');
+</script>
+
   </head>
   <body>
     <!-- Navegação reutilizada -->
