--- a/index.html
+++ b/index.html
@@ -49,6 +49,16 @@
     }
   }
   </script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8PZ7RNGLVL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8PZ7RNGLVL');
+</script>
+
 </head>
 
 <body>
