--- a/index.html
+++ b/index.html
@@ -300,16 +300,15 @@
           </div>
           <p data-i18n="footer.description">Exclusive coupons for the best experiences in Portugal.</p>
           <div class="social-links">
-            <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+            <!--<a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>-->
+            <a href="https://www.instagram.com/voucherhub.pt?igsh=amxlbjN0cWhpNzho" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
           </div>
         </div>
         <div class="footer-info">
           <div class="footer-section">
             <h4 data-i18n="footer.experiences">Experiences</h4>
             <ul>
-              <li><a href="#modalidades" data-i18n="footer.waterSports">Water Sports</a></li>
+              <li><a href="#modalidades" data-i18n="footer.waterSports">Sports</a></li>
               <li><a href="#modalidades" data-i18n="footer.adventure">Adventure</a></li>
               <li><a href="#modalidades" data-i18n="footer.culture">Culture & History</a></li>
               <li><a href="#modalidades" data-i18n="footer.gastronomy">Gastronomy</a></li>
