--- a/experience.html
+++ b/experience.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title id="page-title">VoucherHub – Experience</title>
+
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="i18n-styles.css" />
+
+    <!-- Fontes e ícones -->
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Playfair+Display:wght@400;500;600;700&display=swap"
       rel="stylesheet"
@@ -18,28 +21,30 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-  
-    <!-- SEO: Base Meta; will be refined dynamically by experience.js -->
-    <meta name="description" content="Find partner schools and tour operators in Portugal with exclusive coupon codes.">
-    <link rel="canonical" href="https://yourdomain.com/experience">
+
+    <!-- SEO Base (será atualizado dinamicamente pelo experience.js) -->
+    <meta
+      name="description"
+      content="Find partner schools and tour operators in Portugal with exclusive coupon codes."
+    />
+    <link rel="canonical" href="https://yourdomain.com/experience" />
     <link rel="alternate" hreflang="en" href="https://yourdomain.com/experience" />
     <link rel="alternate" hreflang="pt-br" href="https://yourdomain.com/br/experiencia" />
     <link rel="alternate" hreflang="x-default" href="https://yourdomain.com/experience" />
-    <meta name="google" content="notranslate">
+    <meta name="google" content="notranslate" />
 
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-8PZ7RNGLVL"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-8PZ7RNGLVL');
-</script>
-
+    <!-- Google tag (Analytics) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8PZ7RNGLVL"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag("js", new Date());
+      gtag("config", "G-8PZ7RNGLVL");
+    </script>
   </head>
+
   <body>
-    <!-- Navegação reutilizada -->
+    <!-- ✅ <main> deve envolver apenas o conteúdo principal, não o <nav> -->
     <nav class="navbar">
       <div class="nav-container">
         <a href="index.html" class="logo">
@@ -49,44 +54,50 @@
           <i class="fas fa-fire"></i>
           <span data-i18n="nav.badge">Current Deals</span>
         </div>
-        <!-- O seletor de idiomas será inserido aqui automaticamente pelo i18n.js -->
       </div>
     </nav>
 
-    <!-- Cabeçalho da página -->
-    <section class="hero" style="min-height: 40vh">
-      <div class="hero-background"></div>
-      <div class="hero-content">
-        <div class="hero-badge" id="mode-badge">
-          <i class="fas fa-star"></i>
-          <span>Category</span>
+    <!-- CONTEÚDO PRINCIPAL -->
+    <main itemscope itemtype="https://schema.org/OfferCatalog">
+      <!-- Cabeçalho da página -->
+      <section class="hero" style="min-height: 40vh">
+        <div class="hero-background"></div>
+        <div class="hero-content">
+          <div class="hero-badge" id="mode-badge">
+            <i class="fas fa-star"></i>
+            <span>Category</span>
+          </div>
+          <h1 id="mode-title">Category</h1>
+          <p id="mode-description">
+            See partner schools with exclusive discounts.
+          </p>
+          <nav class="breadcrumb" aria-label="Breadcrumb" style="margin-top: 1rem">
+            <a href="index.html" data-i18n="experiencePage.home">Home</a>
+            <span>›</span>
+            <span id="crumb-current">Category</span>
+          </nav>
         </div>
-        <h1 id="mode-title">Category</h1>
-        <p id="mode-description">See partner schools with exclusive discounts.</p>
+      </section>
 
-        <div class="breadcrumb" style="margin-top: 1rem">
-          <a href="index.html" data-i18n="experiencePage.home">Home</a>
-          <span>›</span>
-          <span id="crumb-current">Category</span>
+      <!-- Lista de escolas -->
+      <section class="experiences" aria-labelledby="discount-center">
+        <div class="container">
+          <div class="section-header">
+            <h2 id="discount-center" data-i18n="experiencePage.discountCenter">
+              Discount <span class="highlight-orange">Center</span>
+            </h2>
+            <p id="results-count" data-i18n="experiencePage.loading">
+              Loading offers…
+            </p>
+          </div>
+
+          <div class="cards-grid" id="partners-grid"></div>
         </div>
-      </div>
-    </section>
-
-    <!-- Lista de escolas -->
-    <section class="experiences">
-      <div class="container">
-        <div class="section-header">
-          <h2 data-i18n="experiencePage.discountCenter">Discount <span class="highlight-orange">Center</span></h2>
-          <p id="results-count" data-i18n="experiencePage.loading">Loading offers…</p>
-        </div>
-
-        <div class="cards-grid" id="partners-grid"></div>
-      </div>
-    </section>
+      </section>
+    </main>
 
     <!-- Toast -->
     <div id="toast" class="toast">
-      
       <span data-i18n="toast.codeCopied">Code copied successfully!</span>
     </div>
 
