--- a/experience.html
+++ b/experience.html
@@ -102,8 +102,8 @@
     </div>
 
     <!-- Scripts -->
-    <script src="i18n.js"></script>
-    <script src="script.js"></script>
-    <script src="experience.js"></script>
+    <script src="i18n.js" defer></script>
+    <script src="script.js" defer></script>
+    <script src="experience.js" defer></script>
   </body>
 </html>
