--- a/experience.html
+++ b/experience.html
@@ -44,7 +44,7 @@
   </head>
 
   <body>
-    <!-- ✅ <main> deve envolver apenas o conteúdo principal, não o <nav> -->
+    <!-- NAVEGAÇÃO -->
     <nav class="navbar">
       <div class="nav-container">
         <a href="index.html" class="logo">
