--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             <i class="fas fa-ticket-alt"></i>
           </div>
           <h3 data-i18n="howItWorks.step2Title">Reveal the Code</h3>
-          <p data-i18n="howItWorks.step2Text">Click the "Reveal Code" button inside the chosen category and copy the code, or take the QR code to the physical store to be scanned.</p>
+          <p data-i18n="howItWorks.step2Text">Click the 'Reveal Code' button within the chosen category and copy the code, or save the QR code.</p>
         </div>
         <div class="step">
           <div class="step-number">3</div>
@@ -269,7 +269,7 @@
             <i class="fas fa-external-link-alt"></i>
           </div>
           <h3 data-i18n="howItWorks.step3Title">Enjoy the Discount</h3>
-          <p data-i18n="howItWorks.step3Text">Go to the official site, enter the code at checkout and enjoy your discounted experience!</p>
+          <p data-i18n="howItWorks.step3Text">Go to the official website, enter the code at checkout, or take the QR code to the location to be scanned and enjoy your discounted experience!</p>
         </div>
       </div>
     </div>
