--- a/index.html
+++ b/index.html
@@ -180,8 +180,9 @@
             <div class="card-actions">
               <span class="btn btn-code" style="pointer-events:none">
                 <i class="fas fa-arrow-right"></i>
-                <span data-i18n="experiences.seeSchools">See schools on sale</span>
-              </span>
+                <span data-i18n="experiences.seeBrands">
+                  See brands on sale 
+               </span>
             </div>
           </div>
         </a>
