--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <!-- Card: Guide and Driver Tour -->
         <a class="experience-card" data-category="culture" href="experience.html?slug=tour%20guide%20and%20driver" style="text-decoration:none;color:inherit">
           <div class="card-image">
-            <img src="https://images.pexels.com/photos/1761179/pexels-photo-1761179.jpeg" alt="Sintra Tour" width="400" height="267" loading="lazy">
+            <img src="https://images.pexels.com/photos/6271668/pexels-photo-6271668.jpeg" alt="Tour" width="400" height="267" loading="lazy">
             <div class="card-badge">
               <i class="fas fa-percentage"></i>
               <span>10% - 20% OFF</span>
