--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎫</text></svg>">
+  <link rel="icon" type="image/png" href="favcon.png">
+
 
   <meta name="description" content="VoucherHub – Discover the best experiences in Portugal with exclusive coupon codes. Save on restaurants, surf schools, walking tours, yoga studios and more in Lisbon and beyond.">
   <meta name="keywords" content="Portugal discount codes, Lisbon coupons, Portugal deals, surf school discount, walking tour promo code Lisbon, yoga class offers, restaurant discounts Portugal, travel deals Portugal, o que fazer em Portugal, atividades em Lisboa, experiências com desconto, códigos promocionais Portugal, cupões de desconto Lisboa, tours e bilhetes baratos, surf lessons Portugal, yoga studio Lisboa desconto, voucher atividades Portugal, turismo barato Portugal, descontos exclusivos, things to do in Lisbon, Lisbon activities, exclusive discounts, what to do in Portugal, activities in Lisbon, discounted experiences, promotional codes Portugal, discount coupons Lisbon, cheap tours and tickets, surf lessons Portugal, yoga studio Lisbon discount, voucher activities Portugal, cheap tourism Portugal, exclusive discounts">
@@ -184,7 +185,7 @@
         </a>
 
         <!-- Card: Guide and Driver Tour -->
-        <a class="experience-card" data-category="culture" href="experience.html?slug=tour%20guide%20and%20driver" style="text-decoration:none;color:inherit">
+        <a class="experience-card" data-category="culture" href="experience.html?slug=tour" style="text-decoration:none;color:inherit">
           <div class="card-image">
             <img src="https://images.pexels.com/photos/6271668/pexels-photo-6271668.jpeg" alt="Tour" width="400" height="267" loading="lazy">
             <div class="card-badge">
@@ -210,7 +211,7 @@
         </a>
 
         <!-- Card: Fashion (atenção: slug está 'Moda' com maiúscula; padronize para 'fashion' ou 'moda' lowercase) -->
-        <a class="experience-card featured" data-category="praia" href="experience.html?slug=Moda" style="text-decoration:none;color:inherit">
+        <a class="experience-card featured" data-category="praia" href="experience.html?slug=moda" style="text-decoration:none;color:inherit">
           <div class="card-image">
             <img src="https://res.cloudinary.com/dqn2v9mtu/image/upload/v1759862655/IMG-20251002-WA0020_dsvvsi.jpg" alt="Moda" width="400" height="267" loading="lazy">
             <div class="card-badge">
