--- a/partner.html
+++ b/partner.html
@@ -97,5 +97,12 @@
       <p>© 2025 VoucherHub – Todos os direitos reservados.</p>
     </div>
   </footer>
+    <script>
+    window.VOUCHERHUB_API = "https://postgres-production-af6d.up.railway.app";
+  </script>
+  <script src="buy.js" defer></script>
+</body>
+</html>
+
 </body>
 </html>
