--- a/experience.html
+++ b/experience.html
@@ -25,7 +25,7 @@
       name="description"
       content="Find partner schools and tour operators in Portugal with exclusive coupon codes."
     />
-    <link rel="canonical" href="https://yourdomain.com/experience" />
+    <link rel="canonical" href="https://modest-comfort-production.up.railway.app" />
     <link rel="alternate" hreflang="en" href="https://yourdomain.com/experience" />
     <link rel="alternate" hreflang="pt-br" href="https://yourdomain.com/br/experiencia" />
     <link rel="alternate" hreflang="x-default" href="https://yourdomain.com/experience" />
