--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <meta name="description" content="VoucherHub – Discover the best experiences in Portugal with exclusive coupon codes. Save on restaurants, surf schools, walking tours, yoga studios and more in Lisbon and beyond.">
   <meta name="keywords" content="Portugal discount codes, Lisbon coupons, Portugal deals, surf school discount, walking tour promo code Lisbon, yoga class offers, restaurant discounts Portugal, travel deals Portugal, o que fazer em Portugal, atividades em Lisboa, experiências com desconto, códigos promocionais Portugal, cupões de desconto Lisboa, tours e bilhetes baratos, surf lessons Portugal, yoga studio Lisboa desconto, voucher atividades Portugal, turismo barato Portugal, descontos exclusivos, things to do in Lisbon, Lisbon activities, exclusive discounts, what to do in Portugal, activities in Lisbon, discounted experiences, promotional codes Portugal, discount coupons Lisbon, cheap tours and tickets, surf lessons Portugal, yoga studio Lisbon discount, voucher activities Portugal, cheap tourism Portugal, exclusive discounts">
   <meta name="author" content="VoucherHub">
-  <link rel="canonical" href="https://yourdomain.com/">
+  <link rel="canonical" href="https://modest-comfort-production.up.railway.app/">
   <link rel="alternate" hreflang="en" href="https://yourdomain.com/" />
   <link rel="alternate" hreflang="pt-br" href="https://yourdomain.com/br/" />
   <link rel="alternate" hreflang="x-default" href="https://yourdomain.com/" />
