--- a/index.html
+++ b/index.html
@@ -64,6 +64,16 @@
 </head>
 
 <body>
+
+
+  <div style="background:#ff9800;color:#fff;text-align:center;padding:8px 0;font-weight:600;position:fixed;top:0;width:100%;z-index:9999;">
+  ⚠️ Este site está em fase de testes. As compras e pagamentos ainda não estão ativos. ⚠️
+</div>
+
+<!-- garante que o conteúdo não fique escondido -->
+<style> body { margin-top: 40px; } </style>
+
+
   <!-- Navegação principal (navbar)
        Contém logo (link para home) e badge com destaque de ofertas.
        Elementos marcados com data-i18n serão traduzidos pelo i18n.js.
