--- a/index.html
+++ b/index.html
@@ -300,6 +300,32 @@
           </div>
         </a>
 
+        <!-- Card: Terapias Naturais e Holísticas -->
+        <a class="experience-card" data-category="terapias" href="experience.html?slug=wellness" style="text-decoration:none;color:inherit">
+          <div class="card-image">
+            <img src="https://images.pexels.com/photos/3822622/pexels-photo-3822622.jpeg" alt="Terapias Naturais e Holísticas" width="400" height="267" loading="lazy">
+            <div class="card-badge">
+              <i class="fas fa-percentage"></i>
+              <span>20% OFF</span>
+            </div>
+          </div>
+          <div class="card-content">
+            <i class="fas fa-leaf"></i>
+            <h3 data-i18n="experiences.wellnessTherapies">Wellness & Natural Therapies</h3>
+            <div class="price-section">
+              <div class="price-original">€90</div>
+              <div class="price-discount">€72</div>
+              <div class="savings"><span data-i18n="experiences.save">Save</span> €18</div>
+            </div>
+            <div class="card-actions">
+              <span class="btn btn-code" style="pointer-events:none">
+                <i class="fas fa-arrow-right"></i>
+                <span data-i18n="experiences.seeTherapies">See therapies on sale</span>
+              </span>
+            </div>
+          </div>
+        </a>
+
       </div>
     </div>
   </section>
