--- a/index.html
+++ b/index.html
@@ -303,10 +303,10 @@
         <!-- Card: Terapias Naturais e Holísticas -->
         <a class="experience-card" data-category="terapias" href="experience.html?slug=wellness" style="text-decoration:none;color:inherit">
           <div class="card-image">
-            <img src="https://images.pexels.com/photos/3822622/pexels-photo-3822622.jpeg" alt="Terapias Naturais e Holísticas" width="400" height="267" loading="lazy">
+            <img src="https://res.cloudinary.com/dqn2v9mtu/image/upload/v1762900622/descontos_xaef5m.jpg" alt="Terapias Naturais e Holísticas" width="400" height="267" loading="lazy">
             <div class="card-badge">
               <i class="fas fa-percentage"></i>
-              <span>20% OFF</span>
+              <span>30% OFF</span>
             </div>
           </div>
           <div class="card-content">
@@ -314,8 +314,8 @@
             <h3 data-i18n="experiences.wellnessTherapies">Wellness & Natural Therapies</h3>
             <div class="price-section">
               <div class="price-original">€90</div>
-              <div class="price-discount">€72</div>
-              <div class="savings"><span data-i18n="experiences.save">Save</span> €18</div>
+              <div class="price-discount">€63</div>
+              <div class="savings"><span data-i18n="experiences.save">Save</span> €27</div>
             </div>
             <div class="card-actions">
               <span class="btn btn-code" style="pointer-events:none">
