--- a/partner.html
+++ b/partner.html
@@ -60,6 +60,20 @@
         </div>
       </div>
 
+      <div class="info-card">
+        <h2><i class="fas fa-address-book"></i> Contato</h2>
+        <div id="partner-contact">
+          <p id="partner-email" style="display: none; margin-bottom: 0.5rem;">
+            <i class="fas fa-envelope"></i> 
+            <a href="#" id="partner-email-link"></a>
+          </p>
+          <p id="partner-phone" style="display: none;">
+            <i class="fas fa-phone"></i> 
+            <a href="#" id="partner-phone-link"></a>
+          </p>
+        </div>
+      </div>
+
       <div class="gallery">
         <h2><i class="fas fa-images"></i> Galeria de Fotos</h2>
         <div id="partner-gallery"></div>
