--- a/index.html
+++ b/index.html
@@ -332,39 +332,53 @@
 
   <!-- How it works: passo a passo -->
   <section class="how-it-works">
-    <div class="container">
-      <div class="section-header">
-        <h2 data-i18n="howItWorks.title">How <span class="highlight-orange">It Works?</span></h2>
-        <p data-i18n="howItWorks.subtitle">Simple and fast in 3 steps</p>
-      </div>
-      <div class="steps">
-        <div class="step">
-          <div class="step-number">1</div>
-          <div class="step-icon">
-            <i class="fas fa-search"></i>
-          </div>
-          <h3 data-i18n="howItWorks.step1Title">Choose Your Experience</h3>
-          <p data-i18n="howItWorks.step1Text">Browse the available offers and find your perfect experience.</p>
-        </div>
-        <div class="step">
-          <div class="step-number">2</div>
-          <div class="step-icon">
-            <i class="fas fa-ticket-alt"></i>
-          </div>
-          <h3 data-i18n="howItWorks.step2Title">Reveal the Code</h3>
-          <p data-i18n="howItWorks.step2Text">Click the 'Reveal Code' button within the chosen category and copy the code, or save the QR code.</p>
-        </div>
-        <div class="step">
-          <div class="step-number">3</div>
-          <div class="step-icon">
-            <i class="fas fa-external-link-alt"></i>
-          </div>
-          <h3 data-i18n="howItWorks.step3Title">Enjoy the Discount</h3>
-          <p data-i18n="howItWorks.step3Text">Go to the official website, enter the code at checkout, or take the QR code to the location to be scanned and enjoy your discounted experience!</p>
-        </div>
-      </div>
+  <div class="container">
+    <div class="section-header">
+      <h2 data-i18n="howItWorks.title">How <span class="highlight-orange">It Works?</span></h2>
+      <p data-i18n="howItWorks.subtitle">Simple and fast in 3 steps</p>
     </div>
-  </section>
+
+    <div class="steps">
+
+      <!-- STEP 1 -->
+      <div class="step">
+        <div class="step-number">1</div>
+        <div class="step-icon">
+          <i class="fas fa-search"></i>
+        </div>
+        <h3 data-i18n="howItWorks.step1Title">Choose an Experience</h3>
+        <p data-i18n="howItWorks.step1Text">
+          Explore the categories and pick the experience you want.
+        </p>
+      </div>
+
+      <!-- STEP 2 -->
+      <div class="step">
+        <div class="step-number">2</div>
+        <div class="step-icon">
+          <i class="fas fa-shopping-cart"></i>
+        </div>
+        <h3 data-i18n="howItWorks.step2Title">Buy Your Voucher</h3>
+        <p data-i18n="howItWorks.step2Text">
+          Complete your purchase securely. Your voucher is generated instantly.
+        </p>
+      </div>
+
+      <!-- STEP 3 -->
+      <div class="step">
+        <div class="step-number">3</div>
+        <div class="step-icon">
+          <i class="fas fa-check-circle"></i>
+        </div>
+        <h3 data-i18n="howItWorks.step3Title">Use & Enjoy</h3>
+        <p data-i18n="howItWorks.step3Text">
+          Receive your voucher by e-mail and show it to the partner. They validate it online and you enjoy the experience!
+        </p>
+      </div>
+
+    </div>
+  </div>
+</section>
 
   <!-- Footer: informações de contato, links e disclaimers -->
   <footer class="footer">
