--- a/index.html
+++ b/index.html
@@ -141,7 +141,6 @@
           <div class="card-image">
             <img src="https://images.pexels.com/photos/4783706/pexels-photo-4783706.jpeg" alt="Surf Lessons" width="400" height="267" loading="lazy">
             <div class="card-badge">
-              <i class="fas fa-percentage"></i>
               <span> 10% - 30% OFF</span>
             </div>
           </div>
@@ -171,7 +170,6 @@
           <div class="card-image">
             <img src="https://images.pexels.com/photos/317155/pexels-photo-317155.jpeg" alt="Lisboa" width="400" height="267" loading="lazy">
             <div class="card-badge">
-              <i class="fas fa-percentage"></i>
               <span>15% - 30% OFF</span>
             </div>
           </div>
@@ -199,7 +197,6 @@
           <div class="card-image">
             <img src="https://images.pexels.com/photos/6271668/pexels-photo-6271668.jpeg" alt="Tour" width="400" height="267" loading="lazy">
             <div class="card-badge">
-              <i class="fas fa-percentage"></i>
               <span>10% - 30% OFF</span>
             </div>
           </div>
@@ -225,7 +222,6 @@
           <div class="card-image">
             <img src="https://res.cloudinary.com/dqn2v9mtu/image/upload/v1759862655/IMG-20251002-WA0020_dsvvsi.jpg" alt="Moda" width="400" height="267" loading="lazy">
             <div class="card-badge">
-              
               <span>10% - 30% OFF</span>
             </div>
           </div>
@@ -253,7 +249,6 @@
           <div class="card-image">
             <img src="https://images.pexels.com/photos/1705264/pexels-photo-1705264.jpeg" alt="Kitesurf" width="400" height="267" loading="lazy">
             <div class="card-badge">
-              <i class="fas fa-percentage"></i>
               <span>10% - 30% OFF</span>
             </div>
           </div>
@@ -279,7 +274,6 @@
           <div class="card-image">
             <img src="https://images.pexels.com/photos/1135197/pexels-photo-1135197.jpeg" alt="Quadriciclo Sintra" width="400" height="267" loading="lazy">
             <div class="card-badge">
-              <i class="fas fa-percentage"></i>
               <span>10% - 30% OFF</span>
             </div>
           </div>
@@ -305,8 +299,7 @@
           <div class="card-image">
             <img src="https://res.cloudinary.com/dqn2v9mtu/image/upload/v1762900622/descontos_xaef5m.jpg" alt="Terapias Naturais e Holísticas" width="400" height="267" loading="lazy">
             <div class="card-badge">
-              <i class="fas fa-percentage"></i>
-              <span>30% OFF</span>
+              <span>10% - 30% OFF</span>
             </div>
           </div>
           <div class="card-content">
