--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
               <li><a href="#como-funciona" data-i18n="footer.howItWorks">How It Works</a></li>
               <li><a href="#" data-i18n="footer.faq">FAQ</a></li>
               <li><a href="#" data-i18n="footer.contact">Contact</a></li>
-              <li><a href="#" data-i18n="footer.terms">Terms of Use</a></li>
+              <li><a href="#" data-i18n="footer.terms">Terms and conditions</a></li>
             </ul>
           </div>
         </div>
